# SpinTool

./: CMakeLists.txt  README.md  WEB_BUILD.md
.github/workflows/: build-web.yml
redist/: render.h
redist/platform/: web_platform.h
redist/rom/: spinball_rom.h  sprite_tile.h  tileset.h  title_screen_decoder.h
redist/ui/: ui_editor.h  ui_file_selector.h  ui_image_io.h  ui_sprite.h  ui_sprite_importer.h  ui_sprite_navigator.h  ui_tile_editor.h  ui_tile_layout_viewer.h  ui_tile_picker.h
src/: main.cpp  render.cpp
src/editor/: editor_project.cpp
src/platform/: web_platform.cpp  web_png_compat.cpp  web_sdl_image_compat.cpp
src/rom/: lzss_decompressor.cpp  spinball_rom.cpp  ssc_compressor.cpp  tileset.cpp  title_screen_decoder.cpp
src/ui/: ui_editor.cpp  ui_file_selector.cpp  ui_image_io.cpp  ui_palette_viewer.cpp  ui_sprite.cpp  ui_sprite_importer.cpp  ui_sprite_navigator.cpp  ui_sprite_viewer.cpp  ui_tile_editor.cpp  ui_tile_layout_viewer.cpp  ui_tile_picker.cpp
web/: build-web.sh  serve.py  shell.html
web/compat/SDL3/: SDL_image.h
